internal/lang/testdata/conformance/accept/component.cmp.gwdk
package widgets

component Badge

view {
  <span class="badge">Badge</span>
}
