internal/lang/testdata/conformance/reject/old_api_block.gwdk
// expect: old_api_block_syntax
package pages

route "/data"

api Items {
  method GET
}

view {
  <main></main>
}
